style.css
/******** GLOBAL ********/
:root {
	--font-family-serif: "Fraunces-subset", "Fraunces", "Fraunces 144pt Soft",
		ui-serif, serif;
	--font-family-sans: "Public Sans", ui-sans-serif, system-ui, sans-serif;
	--line-height: 1.5;

	--color-paper: #fff;
	--color-text-bold: rgba(0, 0, 0, 1);
	--color-text: rgba(0, 0, 0, 0.87);
	--color-secondary: rgba(0, 0, 0, 0.54);
	--color-underline: rgba(0, 0, 0, 0.33);
	--color-accent: #ba160c;

	font-size: 11pt;
	-webkit-text-size-adjust: none;

	--section-gap: calc(1rem * var(--line-height) * 0.25);
}

html {
	margin: 0;
	padding: 42px 16px 60px;
	min-width: calc(210mm + 16px * 2);
	background-color: #f5f5f5;
}

body {
	width: 210mm;
	height: 297mm;
	margin: 0 auto;
	padding: 8mm 10mm;

	background-color: var(--color-paper);
	border-radius: 4px;
	color: var(--color-text);
	box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0 25px 40px rgba(0, 0, 0, 0.1),
		0 50px 80px rgba(0, 0, 0, 0.01);

	font-family: var(--font-family-sans);
	font-feature-settings: "ss01", "liga" 0;
	font-size: 1rem;
	line-height: var(--line-height);

	display: grid;
	grid-template-columns: [start] 50mm [main] 1fr [end];
	column-gap: 5.5mm;
	align-items: baseline;
	align-content: start;
}

* {
	box-sizing: border-box;
	grid-column: main / end;
}

hr {
	grid-column: -1 / 1;

	margin: calc(1rem * var(--line-height) * (1.5 - 0.25) - 0.07rem) 0
		calc(1rem * var(--line-height) * 0.25);
	border: none;
	border-bottom: 0.07rem solid var(--color-text);
}

/******** TYPOGRAPHY ********/
:is(h1, h2, h3, h4, h5, h6, p) {
	margin: 0;
}
:is(h1, h3, h4, h5, h6, strong) {
	color: var(--color-text-bold);
}

h1 {
	font-family: var(--font-family-serif);
	font-size: 2.618rem;
	font-weight: 350;
	line-height: 1;
	font-feature-settings: normal;
	font-variation-settings: "opsz" 144, "SOFT" 50, "WONK" 1;
	letter-spacing: normal;
}

h2 {
	font-size: 1rem;
	font-weight: 600;

	grid-column: start / end;
	color: var(--color-accent);
}

h3 {
	line-height: inherit;
	font-weight: 700;
	font-size: inherit;
}

article header ol {
	color: var(--color-secondary);
}

/******** HEADER ********/
body > header {
	display: contents;
}

body > header h1 {
	grid-column: start / main;
	grid-row: span 2;
}

body > header ol {
	align-self: start;
}

body > header + p {
	align-self: end;
}

/******** ARTICLES ********/
article,
section {
	display: contents;
}
:is(article, section) > header {
	grid-column: start / main;
}

article:first-of-type > * {
	margin-top: var(--section-gap);
}
article > * {
	margin-top: calc(1rem * var(--line-height));
}

/******** ROLES AND DATES ********/
dl {
	grid-column: 2 / span 1;
	margin: 0;
}
dt {
	margin-top: var(--section-gap);
}
dd {
	margin: 0;
}
time {
	color: var(--color-secondary);
}

/******** LISTS ********/
ol {
	margin: 0;
	padding: 0;
	list-style-type: none;
}
li + li {
	margin-top: var(--section-gap);
}
li::before {
	content: "\25AA";

	display: inline-block;
	width: 1mm;
	margin-left: -4mm;
	float: left;

	font-weight: 900;
	color: var(--color-underline);
}
@media (hover: hover) {
	li:hover::before {
		color: var(--color-accent);
	}
}
body > header li::before {
	font-feature-settings: normal;
}

ol.inline {
	font-size: 0;
}
ol.inline li {
	display: inline;
	margin-top: 0;
	font-size: 1rem;
}
ol.inline li::before {
	margin-left: 0;
	padding: 0 2mm;
	float: none;
}
ol.inline li:first-of-type::before {
	display: none;
}
ol.inline li.collapse-padding::before {
	padding-left: 0;
}

/******** SKILLS ********/
.skills > * {
	margin-top: var(--section-gap);
}
.skills h3 {
	grid-column: start / main;
	font-weight: normal;
}
.skills ol.inline li:first-of-type {
	margin-left: -5mm;
}
.skills ol.inline li:first-of-type::before {
	display: inline-block;
}

/******** INLINE ELEMENTS ********/
a {
	color: inherit;
	text-decoration-line: underline;
	text-decoration-color: var(--color-underline);
	text-decoration-thickness: from-font;
	text-underline-position: from-font;
}
a:hover,
a:focus,
a:active {
	text-decoration-color: var(--color-accent);
	text-decoration-style: wavy;
	text-decoration-skip-ink: none;
}
a:active {
	opacity: 0.5;
}

strong {
	font-weight: 650;
}

.end-punct {
	margin-left: -0.22em;
	position: relative;
	right: -0.22em;
}

.mdash {
	font-feature-settings: "aalt";
}

@media print {
	html {
		margin: 0;
		padding: 0;
		min-width: auto;
		background-color: #fff;
	}
	body {
		box-shadow: none;
		border-radius: 0;
	}
}

@media (prefers-color-scheme: dark) {
	:root {
		background-color: #242021;
	}
	body {
		--color-paper: #2e2a2b;
		--color-text-bold: rgba(255, 255, 255, 1);
		--color-text: rgba(255, 255, 255, 0.8);
		--color-secondary: rgba(255, 255, 255, 0.54);
		--color-underline: rgba(255, 255, 255, 0.33);
		--color-accent: #ff8574;
	}
}

